PyCharm/logs/2024-09-26_18-58-26.log
2024-09-26 18:58:26,411 - INFO - Server started, log file: ./logs/2024-09-26_18-58-26.log
2024-09-26 18:58:26,415 - INFO - [31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:8000
 * Running on http://172.20.10.2:8000
2024-09-26 18:58:26,415 - INFO - [33mPress CTRL+C to quit[0m
2024-09-26 18:58:30,723 - INFO - Index page accessed
2024-09-26 18:58:30,729 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:30] "GET / HTTP/1.1" 200 -
2024-09-26 18:58:30,765 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:30] "GET /static/stylesheet.css HTTP/1.1" 200 -
2024-09-26 18:58:30,774 - INFO - Video feed accessed
2024-09-26 18:58:30,776 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:30] "[36mGET /static/selects.css HTTP/1.1[0m" 304 -
2024-09-26 18:58:30,794 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:30] "[36mGET /static/x.js HTTP/1.1[0m" 304 -
2024-09-26 18:58:31,173 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:31] "GET /video_feed HTTP/1.1" 200 -
2024-09-26 18:58:31,240 - INFO - 172.20.10.2 - - [26/Sep/2024 18:58:31] "[36mGET /static/icon.png HTTP/1.1[0m" 304 -
2024-09-26 18:59:33,848 - INFO - Index page accessed
2024-09-26 18:59:33,853 - ERROR - Exception on / [GET]
Traceback (most recent call last):
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/flask/app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/flask/app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/flask/app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/flask/app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/server.py", line 28, in index
    return render_template_string(functions.read_file("templates/index.html"))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/flask/templating.py", line 161, in render_template_string
    template = app.jinja_env.from_string(source)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/weidi/Desktop/4BI/ITPÜ/Heatseekers/PyCharm/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 22, in template
jinja2.exceptions.TemplateSyntaxError: unexpected char '?' at 738
2024-09-26 18:59:33,856 - INFO - 172.20.10.2 - - [26/Sep/2024 18:59:33] "[35m[1mGET / HTTP/1.1[0m" 500 -
2024-09-26 18:59:33,983 - INFO - 172.20.10.2 - - [26/Sep/2024 18:59:33] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
